@@ -31,6 +31,7 @@
 #         --verbosity=<number>        # Set VERBOSITY
 #         --directory=<directory>     # Directory where configuration resides (default is /etc/shorewall)
 #         --timestamp                 # Timestamp all progress messages
+#         --debugging                 # Print stack trace on warnings and fatal error.
 #
 # Default values for compiler options are given in environmental variables as follows:
 #
@@ -40,6 +41,7 @@
 #	   --export		  EXPORT
 #	   --directory		  SHOREWALL_DIR
 #	   --timestamp		  TIMESTAMP
+#          --debugging            <none>
 #
 use strict;
 use lib '/usr/share/shorewall-perl';
@@ -47,7 +49,7 @@ use Shorewall::Compiler;
 use Getopt::Long;
 
 sub usage() {
-    print STDERR "usage: compiler.pl [ --export ] [ --directory=<directory> ] [ --verbose={0-2} ] [ --timestamp ] [ <filename> ]\n";
+    print STDERR "usage: compiler.pl [ --export ] [ --directory=<directory> ] [ --verbose={0-2} ] [ --timestamp ] [ -- debuging ] [ <filename> ]\n";
     exit 1;
 }
 
@@ -58,6 +60,7 @@ my $export        = $ENV{EXPORT}        || 0;
 my $shorewall_dir = $ENV{SHOREWALL_DIR} || '';
 my $verbose       = $ENV{VERBOSE}       || 0;
 my $timestamp     = $ENV{TIMESTAMP}     || '';
+my $debug         = 0;
 
 Getopt::Long::Configure ('bundling');
 
@@ -68,7 +71,9 @@ my $result = GetOptions('export'      => \$export,
 			'verbose=i'   => \$verbose,
 			'v=i'         => \$verbose,
 			'timestamp'   => \$timestamp,
-			't'           => \$timestamp );
+			't'           => \$timestamp,
+		        'debugging'   => \$debug
+		       );
 
 usage unless $result && @ARGV < 2;
 
@@ -76,5 +81,6 @@ my $options = 0;
 
 $options |= EXPORT    if $export;
 $options |= TIMESTAMP if $timestamp;
+$options |= DEBUG     if $debug;
 
 compiler $ARGV[0], $shorewall_dir, $verbose, $options;
