@@ -10,6 +10,8 @@ Changes in 4.0.0 Beta 6
 
 5)  Implement VALIDATE_PORTS
 
+6)  First step to adding compiler debugging facility.
+
 Changes in 4.0.0 Beta 5
 
 1)  Fix undefined function call when both an input interface and an
